# langchain-study

./: .gitignore  README.md  main.py  pyproject.toml
docs/: chatmodels.md  prompt_templates.md  structured_output_and_parsing.md
src/config/: api.py
unitests/test_callbacks/: README.md  __init__.py  run_all_tests.py  test_callback_handlers.py  test_callback_inheritance.py
unitests/test_chatmodels/: README.md  __init__.py  async_vs_sync_example.py  test_advanced_features.py  test_async_operations.py  test_basic_chat.py  test_error_handling.py  test_multimodal.py  test_streaming.py  test_tool_calling.py
unitests/test_embeddings/: README.md  run_tests.py  test_basic_embeddings.py  test_cached_embeddings.py  test_vector_stores.py
unitests/test_lcel/: README.md  __init__.py  run_all_tests.py  test_async_operations.py  test_basic_composition.py  test_chatopenai_applications.py  test_error_handling.py  test_parallel_execution.py  test_streaming.py  test_syntax_operators.py  test_type_coercion.py
unitests/test_output_parsers/: README.md  __init__.py  run_all_tests.py  test_basic_parsers.py  test_error_handling.py  test_pydantic_parsers.py
unitests/test_prompt_templates/: README.md  __init__.py  run_all_tests.py  test_example_selectors.py  test_jinja2_templates.py  test_prompt_templates.py
unitests/test_pydantic_base_model/: README.md  __init__.py  run_all_tests.py  test_advanced_construction.py  test_basemodel_construction.py  test_langchain_integration.py
unitests/test_retrievers/: README.md  __init__.py  run_tests.py  test_basic_retrievers.py  test_compression_retrievers.py  test_multiquery_retrievers.py  test_search_strategies.py
