[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "httpx>=0.24.0",
    "isort>=5.12.0",
    "langchain[openai]>=0.3.26",
    "loguru>=0.7.3",
    "mypy>=1.0.0",
    "openai>=1.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.10.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "requests>=2.28.0",
    "responses>=0.23.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.11.0.post1",
    "nltk>=3.9.1",
    "defusedxml>=0.7.1",
    "langchain-chroma>=0.2.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
